<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--顶部信息-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/img_hotgood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/red"></ImageView>
        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="信息"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white"/>
        <View
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_1"
            app:layout_constraintTop_toBottomOf="@id/txt_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sort"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/layout_info">
        <TextView
            android:id="@+id/txt_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_hotgood_all"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_price"
            android:textSize="@dimen/sp_18"/>

        <LinearLayout
            android:id="@+id/layout_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/txt_all"
            app:layout_constraintRight_toLeftOf="@id/txt_sort">
            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_hotgood_price"
                android:gravity="center"
                android:textSize="@dimen/sp_18"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dp_3">
                <ImageView
                    android:id="@+id/img_arrow_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_up_normal"/>
                <ImageView
                    android:id="@+id/img_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_down_normal"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_hotgood_sort"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_price"
            android:textSize="@dimen/sp_18"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/gray_word"
        app:layout_constraintTop_toBottomOf="@id/layout_sort"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy_goodList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_sort"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>