<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.demo.CarActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cl_category"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--            Banner轮播-->
            <com.youth.banner.Banner
                android:id="@+id/banner_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_360" />
            <!--商品信息-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_170">

                <LinearLayout
                    android:id="@+id/home__detail_info_30_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_word"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/CarDetail_30txt"
                        android:text="30天无优退货" />

                    <TextView
                        style="@style/CarDetail_30txt"
                        android:text="48小时快速退款" />

                    <TextView
                        style="@style/CarDetail_30txt"
                        android:text="满88元免邮费" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_category_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="沙发"
                    android:textColor="#000"
                    android:textSize="@dimen/sp_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home__detail_info_30_ll" />

                <TextView
                    android:id="@+id/tv_category_info_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="新体验"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category_info_title" />

                <TextView
                    android:id="@+id/tv_category_info_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="599"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sp_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category_info_desc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--数量选择区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/title_car_specs"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:src="@mipmap/ic_arrow_rt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/gray_word" />
            <!--商品评论区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:id="@+id/CI_assess"
                >

                <TextView
                    android:id="@+id/txt_assess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/title_car_assess"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:drawableRight="@mipmap/ic_arrow_rt"
                    android:gravity="center"
                    android:text="@string/title_car_lookall"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/gray_word" />

            <!--评论内容-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:id="@+id/CI_comment"
                >

                <ImageView
                    android:id="@+id/iv_category_info_comment_head_img"
                    android:background="@mipmap/ic_launcher"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_category_info_comment_head_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="null"
                    app:layout_constraintLeft_toRightOf="@+id/iv_category_info_comment_head_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_category_info_comment_head_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:text="null"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_category_info_comment_head_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_30"
                    android:text="nuldkjasfaoif发布IE部分看见啥DNF奥斯福呢就是否能爱哦翻就开始放你博FB那l"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_category_info_comment_head_img" />

                <ImageView
                    android:id="@+id/iv_category_info_comment_img"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category_info_comment_head_desc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/gray_word" />
            <!--商品参数区域-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_20"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_category_parameter"
                    style="@style/carText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="商品参数"
                    android:textSize="@dimen/dp_22"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRlv_category_parameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--商品详情区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

<!--                <WebView-->
<!--                    android:id="@+id/webView_category"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    tools:ignore="WebViewLayout" />-->
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mRlv_categroy_bigimage"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--商品常见问题区域-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_category_issue"
                    style="@style/carText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:text="———  常见问题  ———" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRlv_category_issue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!--大家都在看的商品区域-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_category_all"
                    style="@style/carText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:text="———  大家都爱看  ———" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRlv_category_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <!--    最底部-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsv_category">

        <FrameLayout
            android:id="@+id/fl_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fl_car">

            <ImageView
                android:id="@+id/img_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_collect_normal" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/fl_collect"
            app:layout_constraintRight_toLeftOf="@id/tv_category_buy">

            <ImageView
                android:id="@+id/iv_category_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_car" />

            <TextView
                android:id="@+id/tv_category_number"
                android:layout_width="@dimen/sp_15"
                android:layout_height="@dimen/sp_15"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/shape_car_number"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_8" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_category_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="立即购买"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/fl_car" />

        <TextView
            android:id="@+id/tv_category_addCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:gravity="center"
            android:text="加入购物车"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/tv_category_buy"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>